@@ -1,5 +1,5 @@
 /*
- * $Id: plot3d.h,v 1.7 2002/01/26 21:44:51 joze Exp $
+ * $Id: plot3d.h,v 1.8 2002/02/13 22:58:18 mikulik Exp $
  */
 
 /* GNUPLOT - plot3d.h */
@@ -69,6 +69,7 @@ double get_non_pm3d_min __PROTO((void));
 double get_non_pm3d_max __PROTO((void));
 int is_plot_with_palette __PROTO((void));
   /* return 1 if the current splot needs the color palette */
+void update_pm3d_zrange __PROTO((double value, TBOOLEAN need_palette));
 #endif
 
 #endif /* GNUPLOT_PLOT3D_H */
